--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -102,7 +102,6 @@ metadata:
   namespace: aura-flow-dev
   name: fastapi-backend-ingress
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internal
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300
@@ -116,6 +115,7 @@ metadata:
   labels:
     app: fastapi-backend
 spec:
+  ingressClassName: alb
   rules:
   - http:
       paths:
