--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -24,7 +24,7 @@ metadata:
   labels:
     app: fastapi-backend
 data:
-  CORS_ALLOWED_ORIGINS: "http://YOUR_FRONTEND_ALB_DNS_NAME,http://localhost:3000"
+  CORS_ALLOWED_ORIGINS: "http://k8s-auraflow-reactfro-6cd6adc8a3-1336861186.eu-west-2.elb.amazonaws.com"
 
 ---
 # create backend deployment
