Configured OIDC for Github Actions

--- a/kubernetes/backend-us-east-1.yaml
+++ b/kubernetes/backend-us-east-1.yaml
@@ -47,6 +47,7 @@ spec:
   selector:
     matchLabels:
       app: fastapi-backend
+      region: us-east-1
   template:
     metadata:
       labels:
