--- a/kubernetes/frontend-eu-west-2.yaml
+++ b/kubernetes/frontend-eu-west-2.yaml
@@ -5,15 +5,18 @@ metadata:
   namespace: aura-flow-dev
   labels:
     app: react-frontend
+    region: eu-west-2
 spec:
   replicas: 2 
   selector:
     matchLabels:
       app: react-frontend
+      region: eu-west-2
   template:
     metadata:
       labels:
         app: react-frontend
+        region: eu-west-2
     spec:
       containers:
       - name: react-frontend
@@ -49,9 +52,11 @@ metadata:
   name: react-frontend-service
   labels:
     app: react-frontend
+    region: eu-west-2
 spec:
   selector:
     app: react-frontend
+    region: eu-west-2
   ports:
     - protocol: TCP
       port: 80
@@ -75,6 +80,7 @@ metadata:
     # alb.ingress.kubernetes.io/backend-protocol: HTTP
   labels:
     app: react-frontend
+    region: eu-west-2
 spec:
   ingressClassName: alb
   rules:
