Configured Github Actions Pipeline

--- a/kubernetes/backend-eu-west-2.yaml
+++ b/kubernetes/backend-eu-west-2.yaml
@@ -64,7 +64,7 @@ spec:
         - configMapRef:
             name: backend-config
         - secretRef:
-             name: backend-api
+             name: backend
         resources: 
           requests:
             memory: "128Mi"
