--- a/kubernetes/backend-us-east-1.yaml
+++ b/kubernetes/backend-us-east-1.yaml
@@ -98,6 +98,7 @@ metadata:
 spec:
   selector:
     app: fastapi-backend 
+    region: us-east-1
   ports:
     - protocol: TCP
       port: 8000         
